Correct z-index issue.

--- a/packages/terra-popup/src/Popup.scss
+++ b/packages/terra-popup/src/Popup.scss
@@ -2,5 +2,5 @@
 
 // This style cannot be converted to css modules, as it's the class prefix appended by tether.
 .terra-Popup-element {
-  z-index: var(--terra-PopupElement-zIndex);
+  z-index: var(--terra-popup-element-z-index);
 }
