--- a/packages/terra-popup/src/_variables.scss
+++ b/packages/terra-popup/src/_variables.scss
@@ -2,9 +2,11 @@
   // PopupArrow Variables
   --terra-popup-arrow-size: 11px;
   --terra-popup-arrow-color: #b2b5b6;
+  --terra-popup-arrow-z-index: 7002;
   --terra-popup-arrow-inner-size: 10px;
   --terra-popup-arrow-inner-inset-size: 2px;
   --terra-popup-arrow-inner-color: #fff;
+  --terra-popup-arrow-inner-z-index: 7003;
 
   // PopupContent Variables
   --terra-popup-content-margin: 10px;
